# Scrust

./: .gitignore  Cargo.toml  LICENSE  README.md  tempvar_design.md
.github/workflows/: deploy-docs.yml  rust.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts
docs/guide/: assets.md  getting-started.md  project-structure.md  vscode.md
docs/guide/status/: control.md  events.md  index.md  looks.md  motion.md  music.md  my-blocks.md  operators.md  pen.md  sensing.md  sound.md  variables.md
docs/guide/syntax/: blocks.md  control-flow.md  events.md  index.md  operators.md  packages.md  procedures.md  variables.md
editors/vscode/: .vscodeignore  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: scrust.tmLanguage.json
examples/all_blocks/: Scrust.toml
examples/all_blocks/src/: sprite.sr  stage.sr
examples/animation/: scrust.toml
examples/animation/src/: sprite.sr
examples/animation_lib/: scrust.toml
examples/animation_lib/src/: sprite.sr
examples/default_project/: scrust.toml
examples/default_project/src/: sprite.sr
examples/primes/: Scrust.toml
examples/primes/src/: calculator.sr  stage.sr
examples/simple_project/: Scrust.toml
examples/simple_project/src/: apple.sr  bowl.sr  stage.sr
src/: ast.rs  checker.rs  codegen.rs  compiler.rs  config.rs  main.rs  parser.rs  sb3.rs  transform.rs
