[package]
name = "Scrust"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
zip = "0.6"
uuid = { version = "1.6", features = ["v4"] }
md5 = "0.7"
nom = "7.1"
anyhow = "1.0"
colored = "3.0.0"
